syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.helloworld";
option java_outer_classname = "HelloWorldProto";
option objc_class_prefix = "HLW";

package helloworld;



service FileService {
  rpc DownloadFile (DownloadFileRequest) returns (stream DataChunk);
}

message DataChunk {
  string name = 1;
  bytes data = 2;
  int32 width = 3;
  int32 height = 4;
  string type = 5;
  int32 size = 6;
  int32 chunk = 7;
}

message DownloadFileRequest {
  string filename = 1;
}








// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHi (HiRequest) returns (HiReply) {}

  rpc SayHello (HelloRequest) returns (HelloReply) {}

  rpc SayHelloStreamReply (HelloRequest) returns (stream HelloReply) {}

  rpc SayHelloBiDirectionalStreamReply (stream HelloRequest) returns (stream HelloReply) {}
}

// The request message containing the user's name.
message HiRequest {
}
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HiReply {
  string message = 1;
}

message HelloReply {
  string message = 1;
}
